sixth commit_CRUD(완료?)