@@ -4,6 +4,8 @@ import com.msp.playlist.dto.PlaylistRequestDto;
 import com.msp.playlist.dto.PlaylistUpdateDto;
 import com.msp.playlist.entity.Playlist;
 import com.msp.playlist.repository.PlaylistRepository;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -13,6 +15,7 @@ import java.util.stream.Collectors;
 
 // 생성자 만들어주고
 
+@Slf4j
 @Service
 public class PlaylistService {
     private final PlaylistRepository playlistRepository;
@@ -27,28 +30,32 @@ public class PlaylistService {
     }
 
     public List<PlaylistRequestDto> getAllPlaylists() {
-        return playlistRepository.findAll().stream().map(this::convertEntityToDto).collect(Collectors.toList());
+        return playlistRepository.findAll().stream().map(this::convertEntityToDto).toList();
     }
 
     private PlaylistRequestDto convertEntityToDto(Playlist playlist) {
-        PlaylistRequestDto dto = new PlaylistRequestDto(playlist);
-        return dto;
+        return new PlaylistRequestDto(playlist);
     }
 
     public Playlist updatePlaylist(Long id, PlaylistUpdateDto updateDto) {
-        Optional<Playlist> playlistOptional = playlistRepository.findById(id);
-        if (playlistOptional.isPresent()) {
-            Playlist playlist = playlistOptional.get();
-            playlist.setName(updateDto.getName());
-            playlist.setDescription(updateDto.getDescription());
-            playlist.setUpdatedAt(LocalDateTime.now());
-            return playlistRepository.save(playlist);
-        }
+        Playlist playlist = playlistRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("this id not exists id: " + id));
+        playlist.changeNameAndDescription(updateDto);
+
         // 예외 처리 또는 null 반환 등의 처리 필요
-        return null;
+        return playlist;
     }
 
     public void deletePlaylist(Long id) {
-        playlistRepository.deleteById(id);
+        log.info("start delete Playlist id: {}", id);
+        try {
+            playlistRepository.deleteById(id);
+        } catch (EmptyResultDataAccessException e) {
+            log.error("this id is not exists! id: {} message: {}", id, e.getMessage());
+            throw new IllegalArgumentException(e);
+        } catch (Exception e) {
+            log.error("delete Playlist failed id: {} message: {}", id, e.getMessage());
+            throw new RuntimeException();
+        }
     }
 }
